Fix overflow-x on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
 body {
     position: relative;
     padding-top: 40px;
+    overflow-x: hidden;
 }
 
 p {
